--- a/main.tex
+++ b/main.tex
@@ -1,6 +1,7 @@
+% !TeX spellcheck = es_ES
 \documentclass{book}
 \usepackage[utf8]{inputenc}
-
+\usepackage{}
 \begin{document}
 
 \include{cap-introduccion}
