--- a/main.tex
+++ b/main.tex
@@ -1,9 +1,17 @@
 % !TeX spellcheck = es_ES
-\documentclass{book}
+\documentclass{article}
 \usepackage[utf8]{inputenc}
-\usepackage{}
+
 \begin{document}
 
 \include{cap-introduccion}
+\include{cap-objetivos}
+\include{cap-beneficios}
+\include{cap-alternativas}
+\include{cap-diseno}
+\include{cap-necesidades}
+\include{cap-gestion}
+\include{cap-riesgos}
+\include{cap-referencias}
 
 \end{document}
