He avanzado bastante. Estoy reescribiendo los capítulos de beneficios y objetivos

--- a/cap-introduccion.tex
+++ b/cap-introduccion.tex
@@ -1,34 +1,34 @@
 % !TeX spellcheck = es_ES
 % !TeX root = main.tex
 
-\section{Introducci√≥n}
+\chapter{IntroducciÛn}
 
-En los √∫ltimos a√±os, las tecnolog√≠as inform√°ticas de la comunicaci√≥n est√°n revolucionando la manera de comunicarse del mundo entero, tener acceso a internet se ha convertido en algo necesario para poder ponerse en contacto con el resto del mundo.
+En los ˙ltimos aÒos, las tecnologÌas inform·ticas de la comunicaciÛn est·n revolucionando la manera de comunicarse del mundo entero, tener acceso a internet se ha convertido en algo necesario para poder ponerse en contacto con el resto del mundo.
 
-Cada vez est√° todo m√°s interconectado, con el consiguiente crecimiento del tr√°fico en todas las redes. Incluso empresas que antes contrataban redes privadas para sus comunicaciones, ahora utilizan internet.
+Cada vez est· todo m·s interconectado, con el consiguiente crecimiento del tr·fico en todas las redes. Incluso empresas que antes contrataban redes privadas para sus comunicaciones, ahora utilizan internet.
 
-Como en cualquier servicio cr√≠tico el mantenimiento debe ser proactivo y por ello se han creado m√©todos para garantizar la m√°xima eficiencia de las comunicaciones. Para ello se debe garantizar la seguridad en la red y la detecci√≥n instant√°nea de problemas, asegurando as√≠ la \textit{QoS} (\textit{Quality of Service}, Calidad de Servicio).
+Como en cualquier servicio crÌtico el mantenimiento debe ser proactivo y por ello se han creado mÈtodos para garantizar la m·xima eficiencia de las comunicaciones. Para ello se debe garantizar la seguridad en la red y la detecciÛn instant·nea de problemas, asegurando asÌ la \textit{QoS} (\textit{Quality of Service}, Calidad de Servicio).
 
-Para la securizaci√≥n de la red se implantan \textit{firewalls}, \textit{proxys}, y \textit{IDS}s (\textit{Intrusion Detection System}, Sistema de Detecci√≥n de Intrusi√≥n), que se encargan de evitar accesos externos no autorizados a la red, controlar el tr√°fico saliente, y detectar posibles atacantes dentro de la red.
+Para la securizaciÛn de la red se implantan \textit{firewalls}, \textit{proxys}, y \textit{IDS}s (\textit{Intrusion Detection System}, Sistema de DetecciÛn de IntrusiÛn), que se encargan de evitar accesos externos no autorizados a la red, controlar el tr·fico saliente, y detectar posibles atacantes dentro de la red.
 
-El m√©todo para asegurar la calidad de las comunicaciones es la medici√≥n de par√°metros de \textit{QoS}, tales como retardo de los paquetes, errores en la transmisi√≥n, tipos de tr√°fico comunes, rutas √≥ptimas, etc.
+El mÈtodo para asegurar la calidad de las comunicaciones es la mediciÛn de par·metros de \textit{QoS}, tales como retardo de los paquetes, errores en la transmisiÛn, tipos de tr·fico comunes, rutas Ûptimas, etc.
 
-Son varias las soluciones comerciales que implementan estos servicios pero actualmente no hay ninguna que implemente todo en un mismo sistema. Adem√°s, no hay ning√∫n producto de c√≥digo libre que aproveche al m√°ximo la posible eficiencia del equipo, haciendo un an√°lisis \textit{online}\footnote{Online se refiere a hacer el an√°lisis mientras se captura, en vez de capturar, guardar y luego analizar.}.
+Son varias las soluciones comerciales que implementan estos servicios pero actualmente no hay ninguna que implemente todo en un mismo sistema. Adem·s, no hay ning˙n producto de cÛdigo libre que aproveche al m·ximo la posible eficiencia del equipo, haciendo un an·lisis \textit{online}\footnote{Online se refiere a hacer el an·lisis mientras se captura, en vez de capturar, guardar y luego analizar.}.
 
-En el grupo de investigaci√≥n \textit{Network Quality and Security (NQAS)} se ha implementado un sensor que implementa algunas de las citadas funcionalidades, en el dise√±o se ha contemplado la posibilidad de m√°s adelante poder ampliarlo de una manera sencilla, y como valor a√±adido fundamental, aprovecha al m√°ximo los recursos disponibles, ya que ha sido programado de una manera que permita ejecuci√≥n multi-hilo.
+En el grupo de investigaciÛn \textit{Network Quality and Security (NQAS)} se ha implementado un sensor que implementa algunas de las citadas funcionalidades, en el diseÒo se ha contemplado la posibilidad de m·s adelante poder ampliarlo de una manera sencilla, y como valor aÒadido fundamental, aprovecha al m·ximo los recursos disponibles, ya que ha sido programado de una manera que permita ejecuciÛn multi-hilo.
 
-Este prototipo se llama ksensor, aunque no es el primero que se ha creado. La l√≠nea de investigaci√≥n principal, llamada hi-sensor, ha ido haciendo cada vez m√°s complejo el dise√±o y la programaci√≥n del prototipo con el objetivo de mejorar la eficacia.
+Este prototipo se llama ksensor, aunque no es el primero que se ha creado. La lÌnea de investigaciÛn principal, llamada hi-sensor, ha ido haciendo cada vez m·s complejo el diseÒo y la programaciÛn del prototipo con el objetivo de mejorar la eficacia.
 
-A rasgos generales, primero se dise√±o de forma que la aplicaci√≥n fuera un programa de usuario que capturaba a trav√©s de las llamadas est√°ndar al sistema. Se utilizaron tambi√©n las librer√≠as para tener computaci√≥n multi-hilo, y se consiguieron unos resultados prometedores.
+A rasgos generales, primero se diseÒo de forma que la aplicaciÛn fuera un programa de usuario que capturaba a travÈs de las llamadas est·ndar al sistema. Se utilizaron tambiÈn las librerÌas para tener computaciÛn multi-hilo, y se consiguieron unos resultados prometedores.
 
-Cuando se empezaron a analizar redes de alta velocidad en saturaci√≥n, y se vio que hab√≠a un problema: El equipo estaba continuamente capturando, y no hab√≠a espacio para el an√°lisis. Para solucionar este problema, se acord√≥ migrar a espacio de kernel.
+Cuando se empezaron a analizar redes de alta velocidad en saturaciÛn, y se vio que habÌa un problema: El equipo estaba continuamente capturando, y no habÌa espacio para el an·lisis. Para solucionar este problema, se acordÛ migrar a espacio de kernel.
 
-El kernel es la base que hace que todos los programas funcionen. Es un programa que se encarga de gestionar los dispositivos y recursos del ordenador para ofrecer una interfaz libre de detalles a los programas. Adem√°s, tambi√©n se encarga de hacer que varios programas se ejecuten como si se ejecutaran a la vez, que los programas sean capaces de direccionar una memoria que no existe de una forma transparente a ellos, manejando eficazmente una MMU (\textit{Memory Management Unit}, Unidad de Gesti√≥n de Memoria), y muchas otras cosas ocultas al programador m√°s.
+El kernel es la base que hace que todos los programas funcionen. Es un programa que se encarga de gestionar los dispositivos y recursos del ordenador para ofrecer una interfaz libre de detalles a los programas. Adem·s, tambiÈn se encarga de hacer que varios programas se ejecuten como si se ejecutaran a la vez, que los programas sean capaces de direccionar una memoria que no existe de una forma transparente a ellos, manejando eficazmente una MMU (\textit{Memory Management Unit}, Unidad de GestiÛn de Memoria), y muchas otras cosas ocultas al programador m·s.
 
-En general, del dise√±o de un buen kernel depender√° la eficiencia del sistema. En nuestro caso, esta caracter√≠stica tiene valor a√±adido porque el dise√±o del kernel no est√° hecho para nuestro tipo de sistema. La eficiencia del kernel es buena para los sistemas operativos de car√°cter general, en los que capturar los paquetes de uno mismo es suficiente, y que es una cantidad peque√±a en comparaci√≥n con el tr√°fico de la red.
+En general, del diseÒo de un buen kernel depender· la eficiencia del sistema. En nuestro caso, esta caracterÌstica tiene valor aÒadido porque el diseÒo del kernel no est· hecho para nuestro tipo de sistema. La eficiencia del kernel es buena para los sistemas operativos de car·cter general, en los que capturar los paquetes de uno mismo es suficiente, y que es una cantidad pequeÒa en comparaciÛn con el tr·fico de la red.
 
-El sistema que tenemos es √∫nicamente para capturar y procesar y por lo tanto, la m√°xima eficiencia se puede describir como el equilibrio entre el tiempo en el que el ordenador esta capturando y el que est√° analizando. Se tienen que capturar exactamente el n√∫mero de paquetes que se van a analizar.
+El sistema que tenemos es ˙nicamente para capturar y procesar y por lo tanto, la m·xima eficiencia se puede describir como el equilibrio entre el tiempo en el que el ordenador esta capturando y el que est· analizando. Se tienen que capturar exactamente el n˙mero de paquetes que se van a analizar.
 
-La implementaci√≥n actual se ha quedado obsoleta para kernels posteriores, ya que el tratamiento de los paquetes se hace de una forma diferente. Ahora se crean \textit{superpaquetes} ensamblando desde la captura los que tienen una serie de parametros iguales, como pueden ser la IP de origen, IP de destino, puerto TCP destino y origen. De esta manera, al pasar un √∫nico paquete (aunque grande) a la pila de protocolos, se acelera su tratamiento, ya que las copias de los paquetes se pueden hacer en una √∫nica transacci√≥n.
+La implementaciÛn actual se ha quedado obsoleta para kernels posteriores, ya que el tratamiento de los paquetes se hace de una forma diferente. Ahora se crean \textit{superpaquetes} ensamblando desde la captura los que tienen una serie de parametros iguales, como pueden ser la IP de origen, IP de destino, puerto TCP destino y origen. De esta manera, al pasar un ˙nico paquete (aunque grande) a la pila de protocolos, se acelera su tratamiento, ya que las copias de los paquetes se pueden hacer en una ˙nica transacciÛn.
 
-Por lo tanto, el proyecto se enfoca a mejorar el anterior dise√±o para adaptarlo a la nueva manera de hacer las cosas, crear una serie de herramientas para validar el dise√±o y adaptar el proyecto a los est√°ndares defacto existentes en kernel.org para hacer posible la liberaci√≥n del c√≥digo.
+Por lo tanto, el proyecto se enfoca a mejorar el anterior diseÒo para adaptarlo a la nueva manera de hacer las cosas, crear una serie de herramientas para validar el diseÒo y adaptar el proyecto a los est·ndares defacto existentes en kernel.org para hacer posible la liberaciÛn p˙blica del cÛdigo. La tarea de mayor relevancia en estos momentos es posibilitar un estudio comparativo entre un sistema normal y la aplicaciÛn.
