Corrigiendo el capítulo de objetivos

--- a/cap-objetivos.tex
+++ b/cap-objetivos.tex
@@ -14,9 +14,9 @@ Por lo tanto, los objetivos a conseguir mediante este proyecto son:
 \end{enumerate}
 
 \section{Captura eficiente del tráfico de red}
-El sensor debe optimizar el proceso de captura de los paquetes, eliminando si es preciso acciones realizadas por el kernel que no son estrictamente necesarias para el buen funcionamiento del sistema (recolección de estadísticas, copia del paquete a espacio de usuario, etc.).
+Ksensor debe optimizar el proceso de captura de los paquetes, eliminando si es preciso acciones realizadas por el kernel que no son estrictamente necesarias para el buen funcionamiento del sistema (recolección de estadísticas, copia del paquete a espacio de usuario, etc.).
 
-Los sistemas operativos convencionales suelen ser de propósito general, por lo que no están específicamente diseñados para realizar una captura eficiente del tráfico. La mayor parte de los sistemas de análisis de tráfico a nivel de usuario se apoyan en las facilidades proporcionadas por el sistema operativo para realizar la captura, por lo que su rendimiento no es el deseado. El sensor que se propone en este proyecto debe, al trabajar directamente desde el nivel de kernel, resolver dichas ineficiencias, evitando por ejemplo capturar paquetes que posteriormente no pueda analizar, lo cual sin duda degradaría el rendimiento.
+El kernel de Linux es de propósito general, por lo que no está específicamente diseñado para realizar una captura eficiente del tráfico. Ya que la mayor parte de los sistemas de análisis de tráfico a nivel de usuario se apoyan para realizar la captura en las facilidades proporcionadas por sistemas operativos de propósito general, su rendimiento no es óptimo. El sensor que se propone en este proyecto debe, al trabajar directamente desde el nivel de kernel, resolver dichas ineficiencias, evitando por ejemplo capturar paquetes que posteriormente no pueda analizar, lo cual sin duda degradaría el rendimiento.
 
 \section{Paralelización del análisis}
 El análisis del tráfico en redes de alta velocidad es un proceso costoso, que le exige al sensor un alto rendimiento y una capacidad de procesamiento que no se pueden conseguir con las arquitecturas convencionales. Con el fin de acomodar el sensor a las necesidades de procesamiento requeridas por la red, en este proyecto se propone mejorar las prestaciones de una máquina aumentando el número de procesadores.
